<resources>
    <string name="app_name">한복이랑</string>

    <string name="sample">sample</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="startPoint">출발</string>
    <string name="endPoint">도착</string>

    <string name="time">소요시간</string>
    <string name="distance">총 거리</string>
    <string name="cost">팁 비용</string>

    <string name="save">저장하기</string>
    <string name="connect">연결하기</string>

    <string name="group1">관광하기</string>
    <string name="g1_menu1">관광지 선택</string>
    <string name="g1_menu2">투어보관함</string>
    <string name="g1_menu3">주변 가이드</string>
    <string name="group2">설정</string>
    <string name="g2_menu1">프로필 설정</string>
    <string name="g2_menu2">가이드 설정</string>
    <string name="g2_menu3">어플 버젼</string>
</resources>
