<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLeft"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <!-- Name Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/userBg">

    </LinearLayout>
    <!-- Item -->
    <LinearLayout style="@style/groupLayout">
        <TextView style="@style/groupText"
            android:onClick="onMenuClickListener"
            android:id="@+id/group1"
            android:text="@string/group1"/>
    </LinearLayout>
    <LinearLayout style="@style/menuLayout">

        <TextView style="@style/menuText"
            android:onClick="onMenuClickListener"
            android:id="@+id/g1_menu1"
            android:text="@string/g1_menu1"/>
    </LinearLayout>

    <LinearLayout style="@style/menuLayout">
        <TextView style="@style/menuText"
            android:onClick="onMenuClickListener"
            android:id="@+id/g1_menu2"
            android:text="@string/g1_menu2"/>
    </LinearLayout>

    <LinearLayout style="@style/groupLayout">
        <TextView style="@style/groupText"
            android:onClick="onMenuClickListener"
            android:id="@+id/group2"
            android:text="@string/group2"/>
    </LinearLayout>

    <LinearLayout style="@style/menuLayout">
        <TextView style="@style/menuText"
            android:onClick="onMenuClickListener"
            android:id="@+id/g2_menu1"
            android:text="@string/g2_menu1"/>
    </LinearLayout>

    <LinearLayout style="@style/menuLayout">
        <TextView style="@style/menuText"
            android:onClick="onMenuClickListener"
            android:id="@+id/g2_menu2"
            android:text="@string/g2_menu2"/>
    </LinearLayout>

    <LinearLayout style="@style/menuLayout">
        <TextView style="@style/menuText"
            android:onClick="onMenuClickListener"
            android:id="@+id/g2_menu3"
            android:text="@string/g2_menu3"/>
    </LinearLayout>


</LinearLayout>